[FIX] website, website_sale: adapt `.offcanvas` colors
Prior to this commit, `.o_wsale_offcanvas` had a fixed white background,
which created color and contrast issue when the background of the page 
was changed. 

E.g.: When the background of the page is dark, the text color 
will change to white. Whit the fixed white background, the text is now
unreadable.

This commit fixes this issue by using preset color in
`.o_wsale_offcanvas`.

There was also the same issue for `.list-items` that had a forced 
white bg which we removed

task-3097005

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -331,3 +331,6 @@ $pagination-padding-x-lg: $pagination-padding-x !default;
 
 $pagination-border-radius-lg: $pagination-border-radius !default;
 $pagination-border-radius-sm: $pagination-border-radius !default;
+
+// Offcanvas
+$offcanvas-bg-color: $body-bg !default;
